# Black-Scholes

./: .gitignore  CMakeLists.txt  README.md  Start_computing.sh  Zameri.txt  measurements.txt
Kokkos_version/: AoS.cpp  CMakeLists.txt  DoneKokkos.cpp  Kokkos_expl_GPU.cpp  Kokkos_impl_GPU.cpp  SoA.cpp
Parallel_openMP_version/: AoS.cpp  CMakeLists.txt  SoA.cpp  openMP_main.cpp
Serial_version/: CMakeLists.txt  Serial_main.cpp
measurements/: measurements.cpp
